fix padding on tablet

--- a/src/style.css
+++ b/src/style.css
@@ -134,7 +134,7 @@
     align-items: flex-start;
     margin-left: var(--itemSideOffsets);
     margin-right: var(--itemSideOffsets);
-    padding: 30px 0 15px 15px;
+    padding: 30px 15px 15px;
   }
 
   @media (--ui-medium-devices) {
